lecture07/my-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
  labels:
    component: web
    name: my-app
spec:
  containers:
  - name: my-nginx
    image: inql/custom_nginx
    ports:
      - containerPort: 80
