lecture07/mybackendlb-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: newbackend-node-port
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31000
  selector:
    component: backend
    name: my-app2
